优化入参校验
